<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunshine</string>

    <!-- Settings Menu Actions -->
    <string name="action_show_on_map">Show On Map</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- Activity Titles -->
    <string name="title_activity_forecast_detail">Forecast Detail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preferences Strings -->
    <string name="preference_location_title">Location</string>
    <string name="preference_temperature_units_title">Temperature Units</string>

    <!-- Preferences Values Strings -->
    <string name="preference_location_key" translatable="false">location</string>
    <string name="preference_location_default" translatable="false">94043</string>
    <string name="preference_temperature_units_key" translatable="false">temperatureUnit</string>
    <string name="preference_temperature_units_default" translatable="false">1</string>
    <string name="preference_temperature_units_label_metric">Metric</string>
    <string name="preference_temperature_units_label_imperial">Imperial</string>
    <string name="preference_temperature_units_value_metric">0</string>
    <string name="preference_temperature_units_value_imperial">1</string>

    <!-- Social Media Strings -->
    <string name="social_share_hashtag">#OpenWeatherAPI</string>
    <string name="action_share">Share</string>


    <!-- Forecast Helper Methods Constants -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

</resources>
