<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/preference_location_title"
        android:key="@string/preference_location_key"
        android:defaultValue="@string/preference_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/preference_temperature_units_title"
        android:key="@string/preference_temperature_units_key"
        android:defaultValue="@string/preference_temperature_units_default"
        android:entries="@array/preference_temperature_units_list"
        android:entryValues="@array/preference_temperature_units_list_value"/>


</PreferenceScreen>