<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.myprojects.joaolebre.sunshine.app.ForecastDetailActivity">

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/action_show_on_map"
        android:orderInCategory="100"
        android:title="@string/action_show_on_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
